# notes_yandex_check_fastapi

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml
dao/: base.py
migrations/: env.py
migrations/versions/: 9d96cd2c4ea6_initial_migration.py
notes/: dao.py  model.py  router.py  scheme.py  spell_checker.py
tasks/: tasks.py
users/: auth.py  dao.py  dependencies.py  model.py  router.py
